html/Balance sheet/styles.css
html {
    box-sizing: border-box;
  }

  body {
    font-family: sans-serif;
    color: #0a0a23;
  }

  span[class~="sr-only"] {
    border: 0;
    clip: rect(1px, 1px, 1px, 1px);
    clip-path: inset(50%);
    width: 1px;
    height: 1px;
  }

